magesgate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magesgate-web
  namespace: magesgate-com
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magesgate-web
  template:
    metadata:
      labels:
        app: magesgate-web
    spec:
      volumes:
      - name: web-content
        emptyDir: {}
      - name: nginx-config-volume
        configMap:
          name: nginx-config
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-content
          mountPath: "/usr/share/nginx/html"
          readOnly: true
        - name: nginx-config-volume
          mountPath: "/etc/nginx/conf.d/default.conf"
          subPath: default.conf
---
apiVersion: v1
kind: Service
metadata:
  name: magesgate-web
  namespace: magesgate-com
spec:
  type: ClusterIP
  selector:
    app: magesgate-web
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: magesgate-web
  namespace: magesgate-com
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  rules:
  - host: "web.the.magesgate.com" # Sostituisci con il dominio effettivo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: magesgate-web
            port:
              number: 80
  tls:
  - hosts:
    - "web.the.magesgate.com" # Sostituisci con il dominio effettivo
    secretName: magesgate-web-tls
